Lower: code refactoring on Image and Role Tests.